# taura

./: .gitattributes  .gitignore  README.md  go.work  go.work.sum  package.json  requirements.txt  turbo.json
.github/workflows/: ci.yml  companion-release.yml
apps/companion/: .cta.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/companion/public/sequence/: manifest.json
apps/companion/scripts/: prepare_sequence.sh
apps/companion/src/: api.ts  indexer.test.ts  indexer.ts  main.tsx  routeTree.gen.ts  styles.css
apps/companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion/src-tauri/capabilities/: default.json
apps/companion/src-tauri/src/: lib.rs  lib_backup.rs  lib_new.rs  oauth.rs
apps/companion/src/components/: AppShell.tsx  Bento.tsx  ImageTrail.tsx  MacScroll.tsx  OverlayDemo.tsx  QuickSearch.tsx  RecentItems.tsx  ScrollImageSequence.tsx  Slider.tsx  Splash.tsx
apps/companion/src/components/backgrounds/: Aurora.tsx
apps/companion/src/routes/: __root.tsx  index.tsx  onboarding.permissions.tsx  onboarding.preview.tsx  onboarding.welcome.tsx  overlay.tsx  settings.tsx
apps/companion/src/state/: AuthContext.tsx  auth.ts  config.ts
apps/companion/src/ui/: GoogleSignInButton.tsx  OnboardingLayout.tsx
apps/ime-android/: README.md  gradlew  gradlew.bat  settings.gradle.kts
apps/ime-android/app/: build.gradle.kts  proguard-rules.pro
apps/ime-android/app/src/main/: AndroidManifest.xml
apps/ime-android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
apps/ime-android/app/src/main/res/layout/: keyboard_root.xml
infra/: docker-compose.yml
services/api-gateway/: go.mod  go.sum  package.json
services/api-gateway/cmd/eval/: main.go
services/api-gateway/cmd/server/: main.go
services/api-gateway/internal/db/: db.go  migrate.go
services/api-gateway/internal/embed/: client.go  health.go  processor.go
services/api-gateway/internal/handlers/: auth.go  search.go  smoke_test.go  stats.go  sync.go  sync_test.go  user.go
services/api-gateway/testdata/: sample_eval.json
services/embedder/: Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
services/embedder/app/: main.py  models.py
services/embedder/scripts/: test_smoke.py
(+18 files in other folders)
